Hotfix: PSD-12350 -> Main (#341)
* Feature/edu 6668/viewer and submitter permissions fix (#318)

* Add develop tag with build number

* EDU-6756 - added logging to every request (#319)

* Added checks to prevent 500 on invalid id path variables (#320)

* Removed dev-st deploy following sb2 move (#322)

* updated fds to use cookie banner macro (#321)

* EDU-6726: re enable trivy scan (#323)

* bug fix for null ids

* removed duplication from form

* added test

* fixed checkstyle

* addressed sonarcloud issues

* added null setter and comment for when it happens

* updated gradle epa version

* Add e2e tests (#309)

* e2e Test to create a new SCAP, entering all mandatory data and submitting the application

* e2e Adding test library

* Commit initial changes to setup FDS+SCAP

* Full SCAP automation tests

* Rejig package structure. Move wdio to standalone npm project

* Update frontend builds step to node 18

* Update lockfile ver with node 18

* Update with Nils' changes from previous PR

* Update wdio

* Fix submitIncompleteScap.spec.ts

---------

Co-authored-by: nwengert <nils.wengert@fivium.co.uk>
Co-authored-by: KingNils3 <105864586+KingNils3@users.noreply.github.com>
Co-authored-by: msayed <mohammed.sayed@fivium.co.uk>

* Run e2e tests in drone

* Fix ff hostname

* Don't merge caps array

* Revert e2e changes done on wrong branch

* EDU-6790: reduced number of queries on work area (#324)

* feature/EDU6739/remove archived projects from visible list (#331)

* exclude archived pathfinder projects

* feature/EDU-6736/approved status is now No objection (#332)

* approved status is now No objection
only changed frontend

* rebased onto develop

---------

Co-authored-by: laurenlittle1 <101714045+laurenlittle1@users.noreply.github.com>
Co-authored-by: James Barnett <james.barnett@fivium.co.uk>
Co-authored-by: Daniel Ashworth <50422399+danielashworth@users.noreply.github.com>
Co-auth